# PAwareBubblePatternDetection

./: .gitmodules  CMakeLists.txt  LLR_to_test.txt  README.md  SEQ_to_test.txt
BubblesPattern/N64/: bubbles_N64_GF64_SNR-13.00_18x18.txt  bubbles_N64_GF64_SNR-13.00_22x22.txt  bubbles_N64_GF64_SNR-6.50_18x18.txt  bubbles_N64_GF64_SNR-7.50_18x18_Bt_lsts.txt  bubbles_N64_GF64_SNR-7.50_18x18_Bt_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.12_Bt_lsts.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.22_Bt_lsts.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.32_Bt_lsts.txt  bubbles_N64_GF64_SNR-7.50_22x22.txt  bubbles_N64_GF64_SNR-8.00_18x18.txt  bubbles_N64_GF64_SNR-8.00_22x22.txt
BubblesPattern/N64/CotributionMatrices/: bubbles_N64_GF64_SNR-7.50_18x18_Pt0.12_Bt_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.12_Cs_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.22_Bt_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.22_Cs_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.32_Bt_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.32_Cs_mat.txt
BubblesPattern/bpsk/N64/: bubbles_N64_GF64_SNR0.00_18x18_Pt0.08_Bt_lsts.txt  bubbles_N64_GF64_SNR0.00_18x18_Pt0.25_Bt_lsts.txt  bubbles_N64_GF64_SNR0.00_18x18_Pt0.50_Bt_lsts.txt  bubbles_N64_K35_GF64_SNR0.00_18x18_Pt0.20_Bt_lsts.txt
BubblesPattern/bpsk/N64/CotributionMatrices/: bubbles_N64_GF64_SNR0.00_18x18_Pt0.08_Bt_mat.txt  bubbles_N64_GF64_SNR0.00_18x18_Pt0.08_Cs_mat.txt  bubbles_N64_GF64_SNR0.00_18x18_Pt0.25_Bt_mat.txt  bubbles_N64_GF64_SNR0.00_18x18_Pt0.25_Cs_mat.txt  bubbles_N64_GF64_SNR0.00_18x18_Pt0.50_Bt_mat.txt  bubbles_N64_GF64_SNR0.00_18x18_Pt0.50_Cs_mat.txt  bubbles_N64_K20_GF2_SNR0.00_2x2_Pt0.00_Cs_mat.txt  bubbles_N64_K35_GF64_SNR0.00_18x18_Pt0.20_Bt_mat.txt  bubbles_N64_K35_GF64_SNR0.00_18x18_Pt0.20_Cs_mat.txt
BubblesPattern/ccsk_bin/N64/: bubbles_N64_GF64_SNR-7.50_18x18_Pt0.08_Bt_lsts.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.18_Bt_lsts.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.25_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.15_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.20_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.25_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.35_Bt_lsts.txt
BubblesPattern/ccsk_bin/N64/CotributionMatrices/: bubbles_N64_GF64_SNR-7.50_18x18_Pt0.08_Bt_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.08_Cs_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.18_Bt_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.18_Cs_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.25_Bt_mat.txt  bubbles_N64_GF64_SNR-7.50_18x18_Pt0.25_Cs_mat.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.15_Bt_mat.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.15_Cs_mat.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.20_Bt_mat.txt  (+5 more)
BubblesPattern/ccsk_nb/N64/: bubbles_N64_GF64_SNR-7.50_18x18_Pt0.08_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_18x18_Pt0.35_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_64x64_Pt0.35_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_8x8_Pt0.35_Bt_lsts.txt  bubbles_N64_K42_GF64_SNR-7.50_9x18_Pt0.35_Bt_lsts.txt
include/: Decoder_functions.h  GF_tools.h  HelperFunc.h  channel.h  init.h  struct.h  tools.h
matrices/N8/: mat_N8_GF64_SNR0.00.txt
matrices/bpsk/N64/: mat_N64_GF2_SNR0.00.txt  mat_N64_GF64_SNR0.00.txt
matrices/ccsk_bin/N128/: mat_N128_GF64_SNR-17.00.txt
matrices/ccsk_bin/N16/: mat_N16_GF64_SNR-12.00.txt
matrices/ccsk_nb/N128/: mat_N128_GF64_SNR-9.00.txt  mat_N128_GF64_SNR10.00.txt
matrices/ccsk_nb/N64/: mat_N64_GF64_SNR-13.50.txt  mat_N64_GF64_SNR-6.50.txt  mat_N64_GF64_SNR-7.50.txt  mat_N64_GF64_SNR-8.00.txt
source/: Decoder_functions.cpp  GF_tools.cpp  channel.cpp  init.cpp  main.cpp  simulator_bubble_gen.cpp  simulator_decoding.cpp  tools.cpp
(+10 files in other folders)
